--- a/Dataframes.ipynb
+++ b/Dataframes.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
        "4  https://www.facebook.com/562559642740100/posts...  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "5                Belmont Park  83231004302"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
        "22                    Hersheypark  16994689356             209908.0"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
        "0"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +589,7 @@
        "2"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
        "Name: count, Length: 1866, dtype: int64"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
        "Name: total_shares, dtype: float64"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +835,7 @@
        "4                    11.666667  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1067,7 @@
        "9             51              68.77            7                    28.500000  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,11 +1110,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "time data \"12/12/2023 23:23\" doesn't match format \"%m/%d/%y %I:%M %p\", at position 787. You might want to try:\n    - passing `format` if your strings have a consistent format;\n    - passing `format='ISO8601'` if your strings are all ISO8601 but not necessarily in exactly the same format;\n    - passing `format='mixed'`, and the format will be inferred for each element individually. You might want to use `dayfirst` alongside this.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/sandervanduin/Desktop/HVA weekly /Digitial Marketing Strategy/DMSteam9/Dataframes.ipynb Cell 20\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sandervanduin/Desktop/HVA%20weekly%20/Digitial%20Marketing%20Strategy/DMSteam9/Dataframes.ipynb#X25sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sandervanduin/Desktop/HVA%20weekly%20/Digitial%20Marketing%20Strategy/DMSteam9/Dataframes.ipynb#X25sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sandervanduin/Desktop/HVA%20weekly%20/Digitial%20Marketing%20Strategy/DMSteam9/Dataframes.ipynb#X25sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# Converting the 'Date' column to datetime\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/sandervanduin/Desktop/HVA%20weekly%20/Digitial%20Marketing%20Strategy/DMSteam9/Dataframes.ipynb#X25sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m merged_df[\u001b[39m'\u001b[39m\u001b[39mDate\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mto_datetime(merged_df[\u001b[39m'\u001b[39;49m\u001b[39mDate\u001b[39;49m\u001b[39m'\u001b[39;49m], \u001b[39mformat\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m%\u001b[39;49m\u001b[39mm/\u001b[39;49m\u001b[39m%d\u001b[39;49;00m\u001b[39m/\u001b[39;49m\u001b[39m%\u001b[39;49m\u001b[39my \u001b[39;49m\u001b[39m%\u001b[39;49m\u001b[39mI:\u001b[39;49m\u001b[39m%\u001b[39;49m\u001b[39mM \u001b[39;49m\u001b[39m%\u001b[39;49m\u001b[39mp\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sandervanduin/Desktop/HVA%20weekly%20/Digitial%20Marketing%20Strategy/DMSteam9/Dataframes.ipynb#X25sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# Extracting the day of the week\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sandervanduin/Desktop/HVA%20weekly%20/Digitial%20Marketing%20Strategy/DMSteam9/Dataframes.ipynb#X25sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m merged_df[\u001b[39m'\u001b[39m\u001b[39mDay of Week\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m merged_df[\u001b[39m'\u001b[39m\u001b[39mDate\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mdt\u001b[39m.\u001b[39mstrftime(\u001b[39m'\u001b[39m\u001b[39m%\u001b[39m\u001b[39mA\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "File \u001b[0;32m~/Desktop/HVA weekly /Digitial Marketing Strategy/DMSteam9/.venv/lib/python3.11/site-packages/pandas/core/tools/datetimes.py:1067\u001b[0m, in \u001b[0;36mto_datetime\u001b[0;34m(arg, errors, dayfirst, yearfirst, utc, format, exact, unit, infer_datetime_format, origin, cache)\u001b[0m\n\u001b[1;32m   1065\u001b[0m         result \u001b[39m=\u001b[39m arg\u001b[39m.\u001b[39mmap(cache_array)\n\u001b[1;32m   1066\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m-> 1067\u001b[0m         values \u001b[39m=\u001b[39m convert_listlike(arg\u001b[39m.\u001b[39;49m_values, \u001b[39mformat\u001b[39;49m)\n\u001b[1;32m   1068\u001b[0m         result \u001b[39m=\u001b[39m arg\u001b[39m.\u001b[39m_constructor(values, index\u001b[39m=\u001b[39marg\u001b[39m.\u001b[39mindex, name\u001b[39m=\u001b[39marg\u001b[39m.\u001b[39mname)\n\u001b[1;32m   1069\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(arg, (ABCDataFrame, abc\u001b[39m.\u001b[39mMutableMapping)):\n",
+      "File \u001b[0;32m~/Desktop/HVA weekly /Digitial Marketing Strategy/DMSteam9/.venv/lib/python3.11/site-packages/pandas/core/tools/datetimes.py:433\u001b[0m, in \u001b[0;36m_convert_listlike_datetimes\u001b[0;34m(arg, format, name, utc, unit, errors, dayfirst, yearfirst, exact)\u001b[0m\n\u001b[1;32m    431\u001b[0m \u001b[39m# `format` could be inferred, or user didn't ask for mixed-format parsing.\u001b[39;00m\n\u001b[1;32m    432\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mformat\u001b[39m \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m \u001b[39mformat\u001b[39m \u001b[39m!=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mmixed\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m--> 433\u001b[0m     \u001b[39mreturn\u001b[39;00m _array_strptime_with_fallback(arg, name, utc, \u001b[39mformat\u001b[39;49m, exact, errors)\n\u001b[1;32m    435\u001b[0m result, tz_parsed \u001b[39m=\u001b[39m objects_to_datetime64(\n\u001b[1;32m    436\u001b[0m     arg,\n\u001b[1;32m    437\u001b[0m     dayfirst\u001b[39m=\u001b[39mdayfirst,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    441\u001b[0m     allow_object\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m,\n\u001b[1;32m    442\u001b[0m )\n\u001b[1;32m    444\u001b[0m \u001b[39mif\u001b[39;00m tz_parsed \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    445\u001b[0m     \u001b[39m# We can take a shortcut since the datetime64 numpy array\u001b[39;00m\n\u001b[1;32m    446\u001b[0m     \u001b[39m# is in UTC\u001b[39;00m\n",
+      "File \u001b[0;32m~/Desktop/HVA weekly /Digitial Marketing Strategy/DMSteam9/.venv/lib/python3.11/site-packages/pandas/core/tools/datetimes.py:467\u001b[0m, in \u001b[0;36m_array_strptime_with_fallback\u001b[0;34m(arg, name, utc, fmt, exact, errors)\u001b[0m\n\u001b[1;32m    456\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_array_strptime_with_fallback\u001b[39m(\n\u001b[1;32m    457\u001b[0m     arg,\n\u001b[1;32m    458\u001b[0m     name,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    462\u001b[0m     errors: \u001b[39mstr\u001b[39m,\n\u001b[1;32m    463\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Index:\n\u001b[1;32m    464\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    465\u001b[0m \u001b[39m    Call array_strptime, with fallback behavior depending on 'errors'.\u001b[39;00m\n\u001b[1;32m    466\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 467\u001b[0m     result, tz_out \u001b[39m=\u001b[39m array_strptime(arg, fmt, exact\u001b[39m=\u001b[39;49mexact, errors\u001b[39m=\u001b[39;49merrors, utc\u001b[39m=\u001b[39;49mutc)\n\u001b[1;32m    468\u001b[0m     \u001b[39mif\u001b[39;00m tz_out \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    469\u001b[0m         unit \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mdatetime_data(result\u001b[39m.\u001b[39mdtype)[\u001b[39m0\u001b[39m]\n",
+      "File \u001b[0;32mstrptime.pyx:501\u001b[0m, in \u001b[0;36mpandas._libs.tslibs.strptime.array_strptime\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mstrptime.pyx:451\u001b[0m, in \u001b[0;36mpandas._libs.tslibs.strptime.array_strptime\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mstrptime.pyx:583\u001b[0m, in \u001b[0;36mpandas._libs.tslibs.strptime._parse_with_format\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: time data \"12/12/2023 23:23\" doesn't match format \"%m/%d/%y %I:%M %p\", at position 787. You might want to try:\n    - passing `format` if your strings have a consistent format;\n    - passing `format='ISO8601'` if your strings are all ISO8601 but not necessarily in exactly the same format;\n    - passing `format='mixed'`, and the format will be inferred for each element individually. You might want to use `dayfirst` alongside this."
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "# Converting the 'Date' column to datetime\n",
+    "merged_df['Date'] = pd.to_datetime(merged_df['Date'], format='%m/%d/%y %I:%M %p')\n",
+    "# Extracting the day of the week\n",
+    "merged_df['Day of Week'] = merged_df['Date'].dt.strftime('%A')\n",
+    "\n",
+    "merged_df[['Date', 'Day of Week']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#"
+    "from dateutil import parser\n",
+    "\n",
+    "# Attempt to parse dates using a more flexible method\n",
+    "# This will handle a variety of formats but may not catch every possible inconsistency\n",
+    "def flexible_date_parser(date_str):\n",
+    "    try:\n",
+    "        return parser.parse(date_str)\n",
+    "    except ValueError:\n",
+    "        return pd.NaT\n",
+    "\n",
+    "# Apply the flexible date parser to the 'Date' column\n",
+    "merged_df['Date'] = merged_df['Date'].apply(flexible_date_parser)\n",
+    "\n",
+    "# Check again for any rows where 'Date' conversion resulted in NaT\n",
+    "nat_rows_after_parsing = merged_df[merged_df['Date'].isna()]\n",
+    "\n",
+    "# Count the number of NaT rows after the flexible parsing attempt\n",
+    "nat_count_after_parsing = nat_rows_after_parsing.shape[0]\n",
+    "\n",
+    "# Proceed with extracting the day of the week for dates that were successfully parsed\n",
+    "if nat_count_after_parsing == 0:\n",
+    "    # All dates were parsed successfully, proceed with extracting the day of the week\n",
+    "    merged_df['Day of Week'] = merged_df['Date'].dt.strftime('%A')\n",
+    "    success_message = \"All dates were parsed successfully, and the day of the week has been extracted.\"\n",
+    "else:\n",
+    "    # Some dates could not be parsed\n",
+    "    success_message = f\"{nat_count_after_parsing} rows still contain unparseable dates after flexible parsing.\"\n",
+    "\n",
+    "success_message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converting the 'Date' column to datetime\n",
+    "merged_df['Date'] = pd.to_datetime(merged_df['Date'], format='%m/%d/%y %I:%M %p')\n",
+    "# Extracting the day of the week\n",
+    "merged_df['Day of Week'] = merged_df['Date'].dt.strftime('%A')\n",
+    "\n",
+    "merged_df[['Date', 'Day of Week']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Function to categorize part of the day based on the hour\n",
+    "\n",
+    "def get_part_of_day(hour):\n",
+    "    if 5 <= hour < 12:\n",
+    "        return \"Morning\"\n",
+    "    elif 12 <= hour < 17:\n",
+    "        return \"Afternoon\"\n",
+    "    elif 17 <= hour < 22:\n",
+    "        return \"Evening\"\n",
+    "    else:\n",
+    "        return \"Night\"\n",
+    "\n",
+    "# Apply the function to each row in the DataFrame to create a new column\n",
+    "merged_df['Part of Day'] = merged_df['Date'].dt.hour.apply(get_part_of_day)\n",
+    "\n",
+    "# Display the first few rows of the DataFrame to confirm the new column has been added correctly\n",
+    "merged_df[['Date', 'Day of Week', 'Part of Day']].head()\n"
    ]
   },
   {
@@ -1126,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1142,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1172,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1333,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
