--- a/test_features.ipynb
+++ b/test_features.ipynb
@@ -508,6 +508,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for /: 'str' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/owenalberts/Desktop/Master Digital Driven Business/Digital marketing strategy/DMSteam9/test_features.ipynb Cell 5\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/owenalberts/Desktop/Master%20Digital%20Driven%20Business/Digital%20marketing%20strategy/DMSteam9/test_features.ipynb#X16sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m engagement_rate \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mEngagement\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/owenalberts/Desktop/Master%20Digital%20Driven%20Business/Digital%20marketing%20strategy/DMSteam9/test_features.ipynb#X16sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# Calculate Total Followers using the formula\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/owenalberts/Desktop/Master%20Digital%20Driven%20Business/Digital%20marketing%20strategy/DMSteam9/test_features.ipynb#X16sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m total_followers \u001b[39m=\u001b[39m total_engagement \u001b[39m/\u001b[39m (engagement_rate \u001b[39m/\u001b[39;49m \u001b[39m100\u001b[39;49m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/owenalberts/Desktop/Master%20Digital%20Driven%20Business/Digital%20marketing%20strategy/DMSteam9/test_features.ipynb#X16sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(total_followers)\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'str' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "total_engagement = 'Number of Reactions'\n",
+    "engagement_rate = 'Engagement'\n",
+    "\n",
+    "# Calculate Total Followers using the formula\n",
+    "total_followers = total_engagement / (engagement_rate / 100)\n",
+    "print(total_followers)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
