--- a/Dataframes.ipynb
+++ b/Dataframes.ipynb
@@ -1110,43 +1110,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "time data \"12/12/2023 23:23\" doesn't match format \"%m/%d/%y %I:%M %p\", at position 787. You might want to try:\n    - passing `format` if your strings have a consistent format;\n    - passing `format='ISO8601'` if your strings are all ISO8601 but not necessarily in exactly the same format;\n    - passing `format='mixed'`, and the format will be inferred for each element individually. You might want to use `dayfirst` alongside this.",
+     "ename": "NameError",
+     "evalue": "name 'merged_df' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/Users/sandervanduin/Desktop/HVA weekly /Digitial Marketing Strategy/DMSteam9/Dataframes.ipynb Cell 20\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sandervanduin/Desktop/HVA%20weekly%20/Digitial%20Marketing%20Strategy/DMSteam9/Dataframes.ipynb#X25sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sandervanduin/Desktop/HVA%20weekly%20/Digitial%20Marketing%20Strategy/DMSteam9/Dataframes.ipynb#X25sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sandervanduin/Desktop/HVA%20weekly%20/Digitial%20Marketing%20Strategy/DMSteam9/Dataframes.ipynb#X25sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# Converting the 'Date' column to datetime\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/sandervanduin/Desktop/HVA%20weekly%20/Digitial%20Marketing%20Strategy/DMSteam9/Dataframes.ipynb#X25sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m merged_df[\u001b[39m'\u001b[39m\u001b[39mDate\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mto_datetime(merged_df[\u001b[39m'\u001b[39;49m\u001b[39mDate\u001b[39;49m\u001b[39m'\u001b[39;49m], \u001b[39mformat\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m%\u001b[39;49m\u001b[39mm/\u001b[39;49m\u001b[39m%d\u001b[39;49;00m\u001b[39m/\u001b[39;49m\u001b[39m%\u001b[39;49m\u001b[39my \u001b[39;49m\u001b[39m%\u001b[39;49m\u001b[39mI:\u001b[39;49m\u001b[39m%\u001b[39;49m\u001b[39mM \u001b[39;49m\u001b[39m%\u001b[39;49m\u001b[39mp\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sandervanduin/Desktop/HVA%20weekly%20/Digitial%20Marketing%20Strategy/DMSteam9/Dataframes.ipynb#X25sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# Extracting the day of the week\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sandervanduin/Desktop/HVA%20weekly%20/Digitial%20Marketing%20Strategy/DMSteam9/Dataframes.ipynb#X25sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m merged_df[\u001b[39m'\u001b[39m\u001b[39mDay of Week\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m merged_df[\u001b[39m'\u001b[39m\u001b[39mDate\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mdt\u001b[39m.\u001b[39mstrftime(\u001b[39m'\u001b[39m\u001b[39m%\u001b[39m\u001b[39mA\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "File \u001b[0;32m~/Desktop/HVA weekly /Digitial Marketing Strategy/DMSteam9/.venv/lib/python3.11/site-packages/pandas/core/tools/datetimes.py:1067\u001b[0m, in \u001b[0;36mto_datetime\u001b[0;34m(arg, errors, dayfirst, yearfirst, utc, format, exact, unit, infer_datetime_format, origin, cache)\u001b[0m\n\u001b[1;32m   1065\u001b[0m         result \u001b[39m=\u001b[39m arg\u001b[39m.\u001b[39mmap(cache_array)\n\u001b[1;32m   1066\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m-> 1067\u001b[0m         values \u001b[39m=\u001b[39m convert_listlike(arg\u001b[39m.\u001b[39;49m_values, \u001b[39mformat\u001b[39;49m)\n\u001b[1;32m   1068\u001b[0m         result \u001b[39m=\u001b[39m arg\u001b[39m.\u001b[39m_constructor(values, index\u001b[39m=\u001b[39marg\u001b[39m.\u001b[39mindex, name\u001b[39m=\u001b[39marg\u001b[39m.\u001b[39mname)\n\u001b[1;32m   1069\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(arg, (ABCDataFrame, abc\u001b[39m.\u001b[39mMutableMapping)):\n",
-      "File \u001b[0;32m~/Desktop/HVA weekly /Digitial Marketing Strategy/DMSteam9/.venv/lib/python3.11/site-packages/pandas/core/tools/datetimes.py:433\u001b[0m, in \u001b[0;36m_convert_listlike_datetimes\u001b[0;34m(arg, format, name, utc, unit, errors, dayfirst, yearfirst, exact)\u001b[0m\n\u001b[1;32m    431\u001b[0m \u001b[39m# `format` could be inferred, or user didn't ask for mixed-format parsing.\u001b[39;00m\n\u001b[1;32m    432\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mformat\u001b[39m \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m \u001b[39mformat\u001b[39m \u001b[39m!=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mmixed\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m--> 433\u001b[0m     \u001b[39mreturn\u001b[39;00m _array_strptime_with_fallback(arg, name, utc, \u001b[39mformat\u001b[39;49m, exact, errors)\n\u001b[1;32m    435\u001b[0m result, tz_parsed \u001b[39m=\u001b[39m objects_to_datetime64(\n\u001b[1;32m    436\u001b[0m     arg,\n\u001b[1;32m    437\u001b[0m     dayfirst\u001b[39m=\u001b[39mdayfirst,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    441\u001b[0m     allow_object\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m,\n\u001b[1;32m    442\u001b[0m )\n\u001b[1;32m    444\u001b[0m \u001b[39mif\u001b[39;00m tz_parsed \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    445\u001b[0m     \u001b[39m# We can take a shortcut since the datetime64 numpy array\u001b[39;00m\n\u001b[1;32m    446\u001b[0m     \u001b[39m# is in UTC\u001b[39;00m\n",
-      "File \u001b[0;32m~/Desktop/HVA weekly /Digitial Marketing Strategy/DMSteam9/.venv/lib/python3.11/site-packages/pandas/core/tools/datetimes.py:467\u001b[0m, in \u001b[0;36m_array_strptime_with_fallback\u001b[0;34m(arg, name, utc, fmt, exact, errors)\u001b[0m\n\u001b[1;32m    456\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_array_strptime_with_fallback\u001b[39m(\n\u001b[1;32m    457\u001b[0m     arg,\n\u001b[1;32m    458\u001b[0m     name,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    462\u001b[0m     errors: \u001b[39mstr\u001b[39m,\n\u001b[1;32m    463\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Index:\n\u001b[1;32m    464\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    465\u001b[0m \u001b[39m    Call array_strptime, with fallback behavior depending on 'errors'.\u001b[39;00m\n\u001b[1;32m    466\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 467\u001b[0m     result, tz_out \u001b[39m=\u001b[39m array_strptime(arg, fmt, exact\u001b[39m=\u001b[39;49mexact, errors\u001b[39m=\u001b[39;49merrors, utc\u001b[39m=\u001b[39;49mutc)\n\u001b[1;32m    468\u001b[0m     \u001b[39mif\u001b[39;00m tz_out \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    469\u001b[0m         unit \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mdatetime_data(result\u001b[39m.\u001b[39mdtype)[\u001b[39m0\u001b[39m]\n",
-      "File \u001b[0;32mstrptime.pyx:501\u001b[0m, in \u001b[0;36mpandas._libs.tslibs.strptime.array_strptime\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mstrptime.pyx:451\u001b[0m, in \u001b[0;36mpandas._libs.tslibs.strptime.array_strptime\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mstrptime.pyx:583\u001b[0m, in \u001b[0;36mpandas._libs.tslibs.strptime._parse_with_format\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: time data \"12/12/2023 23:23\" doesn't match format \"%m/%d/%y %I:%M %p\", at position 787. You might want to try:\n    - passing `format` if your strings have a consistent format;\n    - passing `format='ISO8601'` if your strings are all ISO8601 but not necessarily in exactly the same format;\n    - passing `format='mixed'`, and the format will be inferred for each element individually. You might want to use `dayfirst` alongside this."
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/owenalberts/Desktop/Master Digital Driven Business/Digital marketing strategy/DMSteam9/Dataframes.ipynb Cell 20\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/owenalberts/Desktop/Master%20Digital%20Driven%20Business/Digital%20marketing%20strategy/DMSteam9/Dataframes.ipynb#X52sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m         \u001b[39mreturn\u001b[39;00m pd\u001b[39m.\u001b[39mNaT\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/owenalberts/Desktop/Master%20Digital%20Driven%20Business/Digital%20marketing%20strategy/DMSteam9/Dataframes.ipynb#X52sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m# Apply the flexible date parser to the 'Date' column\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/owenalberts/Desktop/Master%20Digital%20Driven%20Business/Digital%20marketing%20strategy/DMSteam9/Dataframes.ipynb#X52sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m merged_df[\u001b[39m'\u001b[39m\u001b[39mDate\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m merged_df[\u001b[39m'\u001b[39m\u001b[39mDate\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mapply(flexible_date_parser)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/owenalberts/Desktop/Master%20Digital%20Driven%20Business/Digital%20marketing%20strategy/DMSteam9/Dataframes.ipynb#X52sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39m# Check again for any rows where 'Date' conversion resulted in NaT\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/owenalberts/Desktop/Master%20Digital%20Driven%20Business/Digital%20marketing%20strategy/DMSteam9/Dataframes.ipynb#X52sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m nat_rows_after_parsing \u001b[39m=\u001b[39m merged_df[merged_df[\u001b[39m'\u001b[39m\u001b[39mDate\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39misna()]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'merged_df' is not defined"
      ]
     }
    ],
-   "source": [
-    "#\n",
-    "\n",
-    "# Converting the 'Date' column to datetime\n",
-    "merged_df['Date'] = pd.to_datetime(merged_df['Date'], format='%m/%d/%y %I:%M %p')\n",
-    "# Extracting the day of the week\n",
-    "merged_df['Day of Week'] = merged_df['Date'].dt.strftime('%A')\n",
-    "\n",
-    "merged_df[['Date', 'Day of Week']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from dateutil import parser\n",
     "\n",
@@ -1176,7 +1154,7 @@
     "    # Some dates could not be parsed\n",
     "    success_message = f\"{nat_count_after_parsing} rows still contain unparseable dates after flexible parsing.\"\n",
     "\n",
-    "success_message"
+    "success_message\n"
    ]
   },
   {
@@ -1191,6 +1169,22 @@
     "merged_df['Day of Week'] = merged_df['Date'].dt.strftime('%A')\n",
     "\n",
     "merged_df[['Date', 'Day of Week']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ensure the 'Date' column is already converted to datetime\n",
+    "merged_df['Date'] = pd.to_datetime(merged_df['Date'], format='%m/%d/%y %I:%M %p')\n",
+    "\n",
+    "# Extract the day of the week and encode it (Monday=0, Sunday=6)\n",
+    "merged_df['Day of Week'] = merged_df['Date'].dt.dayofweek\n",
+    "\n",
+    "# Display the first few rows to verify the change\n",
+    "merged_df[['Date', 'Day of Week']]\n"
    ]
   },
   {
@@ -1216,6 +1210,29 @@
     "\n",
     "# Display the first few rows of the DataFrame to confirm the new column has been added correctly\n",
     "merged_df[['Date', 'Day of Week', 'Part of Day']].head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_part_of_day_numeric(hour):\n",
+    "    if 5 <= hour < 12:\n",
+    "        return 0  # Morning\n",
+    "    elif 12 <= hour < 17:\n",
+    "        return 1  # Afternoon\n",
+    "    elif 17 <= hour < 22:\n",
+    "        return 2  # Evening\n",
+    "    else:\n",
+    "        return 3  # Night\n",
+    "\n",
+    "# Apply the modified function to each row in the DataFrame to create a new encoded column\n",
+    "merged_df['Part of Day Numeric'] = merged_df['Date'].dt.hour.apply(get_part_of_day_numeric)\n",
+    "\n",
+    "# Display the first few rows of the DataFrame to confirm the new column has been added correctly\n",
+    "merged_df[['Date', 'Day of Week', 'Part of Day', 'Part of Day Numeric']].head()\n"
    ]
   },
   {
@@ -1962,7 +1979,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
